--- a/styles/new-styles.css
+++ b/styles/new-styles.css
@@ -3,7 +3,8 @@ body {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: lightgrey; }
+  background: -webkit-gradient(linear, left top, left bottom, from(white), to(#2DA0FF));
+  background: linear-gradient(to bottom, white, #2DA0FF); }
 
 .flexcontainer {
   display: -webkit-box;
@@ -50,7 +51,7 @@ li {
   -webkit-box-shadow: 0 0 1rem  black;
           box-shadow: 0 0 1rem  black; }
 
-img {
+div img {
   width: 8em;
   border: 3px solid black;
   margin-left: 1em; }
@@ -65,7 +66,7 @@ img {
   margin-left: 5%; }
 
 .dropbtn {
-  background-color: grey;
+  background-color: white;
   color: black;
   padding: 6px;
   font-size: 16px;
@@ -109,10 +110,12 @@ img {
 .article {
   width: 70%;
   float: right;
-  margin: 1em 1em 2em 0;
-  background-color: silver;
+  margin: 1em 2em 2em 0;
+  background-color: white;
   padding: 0 1em;
-  font-family: 'Source Serif Pro', serif; }
+  font-family: 'Source Serif Pro', serif;
+  -webkit-box-shadow: 3px 3px 3px black;
+          box-shadow: 3px 3px 3px black; }
   .article h1 {
     text-decoration: underline; }
 
@@ -128,6 +131,11 @@ aside {
   float: left;
   width: 10%;
   margin: 3em 3em 0 2em; }
+
+img.side-nav {
+  float: left;
+  margin: 4em 2em;
+  width: 100%; }
 
 button {
   width: 6em;
@@ -154,16 +162,12 @@ form {
   margin-top: 2em;
   font-family: "Anton", sans-serif; }
 
-section {
-  border: 2px solid black;
-  width: 100%;
-  height: 10%;
-  background-color: darkgray; }
-
 section h4 {
   font-family: 'Source Serif Pro', serif;
   color: black;
-  background-color: silver; }
+  background-color: white;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black; }
 
 section a {
   text-decoration: none;
