--- a/styles/new-styles.scss
+++ b/styles/new-styles.scss
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: lightgrey;
+  background: linear-gradient(to bottom, white , #2DA0FF);
 }
 
 .flexcontainer  {
@@ -39,7 +39,7 @@ li  {
   padding: 0 0 0 1em;
   box-shadow: 0 0 1rem  black;
 }
-img  {
+div img  {
   width: 8em;
   border: 3px solid black;
   margin-left: 1em;
@@ -58,7 +58,7 @@ img  {
 }
 
 .dropbtn {
-  background-color: grey;
+  background-color: white;
   color: black;
   padding: 6px;
   font-size: 16px;
@@ -105,10 +105,11 @@ img  {
 .article  {
   width: 70%; 
   float: right;
-  margin: 1em 1em 2em 0;
-  background-color: silver;
+  margin: 1em 2em 2em 0;
+  background-color: white;
   padding: 0 1em; 
-  font-family: 'Source Serif Pro', serif;  
+  font-family: 'Source Serif Pro', serif;
+  box-shadow: 3px 3px 3px black;
   h1  {
     text-decoration: underline;
   }
@@ -130,6 +131,13 @@ aside  {
   margin: 3em 3em 0 2em;
 }
 
+img.side-nav  {
+  float: left;
+  margin: 4em 2em;
+  width: 100%;
+  
+}
+
 button {
   width: 6em;
   background-color: grey;
@@ -148,18 +156,21 @@ form  {
   margin-top: 2em;
   font-family: $navfonts;
 }
-
-section  {
-  border: 2px solid black; 
-  width: 100%;
-  height: 10%;
-  background-color: darkgray;  
-}
+//
+//section  {
+//  border: 2px solid black; 
+//  width: 80%;
+//  height: 10%;
+//  background-color: lightgrey; 
+//  margin: 0 10% 0 10%;
+//}
 
 section h4  {
   font-family: 'Source Serif Pro', serif;
   color: black;
-  background-color: silver;
+  background-color: white;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 
 section a  {
