--- a/styles/new-styles.css
+++ b/styles/new-styles.css
@@ -50,7 +50,13 @@ li {
 div img {
   width: 8em;
   border: 3px solid black;
-  margin-left: 1em; }
+  margin-left: 1em;
+  -webkit-transition: -webkit-transform 3s ease-in-out;
+  transition: -webkit-transform 3s ease-in-out;
+  transition: transform 3s ease-in-out;
+  transition: transform 3s ease-in-out, -webkit-transform 3s ease-in-out;
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg); }
 
 .industry {
   margin-left: 15%; }
@@ -95,7 +101,8 @@ div img {
   min-width: 160px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1; }
+  z-index: 1;
+  margin: .4em 0 0 4em; }
 
 .dropdown-content a {
   color: white;
@@ -159,7 +166,10 @@ section {
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  background-color: #C2CFFF;
+  border: 8px solid black;
+  margin: 0 .5em; }
 
 form {
   margin-top: 2em;
@@ -187,7 +197,7 @@ section a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 0 2em 0; }
+  margin: 1em 0 2em 0; }
 
 @media (max-width: 725px) {
   .flexcontainer {
@@ -203,8 +213,9 @@ section a {
     -ms-flex-flow: wrap;
         flex-flow: wrap; }
 
-  ul a {
-    width: 100%; }
+  ul {
+    width: 45%;
+    margin-right: 6em; }
 
   li {
     width: 100%; }
@@ -224,8 +235,13 @@ section a {
   .facility {
     margin: 0 50%; }
 
-  .dropbtn {
-    clear: both;
+  figure img {
+    width: 100%;
+    margin: auto; }
+
+  aside {
+    width: 85%;
+    margin: 1em auto 1em auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -234,6 +250,44 @@ section a {
             justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; } }
+            align-items: center; }
+
+  form {
+    text-align: center; } }
+@media (max-width: 350px) {
+  ul {
+    width: 45%;
+    margin-right: 6em; }
+
+  #logo-fesc {
+    font-size: 4em; }
+
+  .article {
+    margin: 0 1.5em; }
+
+  .energy {
+    width: 100%; }
+
+  figure img {
+    width: 100%; }
+
+  aside {
+    width: 75%;
+    margin: 1em auto 1em auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+
+  .dropdown-content {
+    margin: auto; }
+
+  form {
+    text-align: center; } }
 
 /*# sourceMappingURL=new-styles.css.map */
