--- a/styles/new-styles.scss
+++ b/styles/new-styles.scss
@@ -5,13 +5,14 @@ body {
   padding: 0;
   box-sizing: border-box;
   background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRulAW-E_A7yRRcR9eLulVYSg6n7anQQ5tdKVmdZJzlp5bHGr-2");
-  
+  background-size: auto;
 }
 
 .flexcontainer  {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+//  justify-content: space-between;
   background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTitZ9f5X4moEJ0TUSMoJBPK3q4cbcGoagExrGjvbmg__Ll6kq0");
   background-size: auto;
   border-bottom: 1px solid black;
@@ -25,10 +26,11 @@ body {
 
 ul a {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   text-decoration: none;
   color: black;
-  margin-right: 20em;
+  // changing margin-right from 20em to 5em
+  margin-right: 5em;
   width: 100%;
 }
 
@@ -39,6 +41,8 @@ li  {
   font-size: 1.2em;
   padding: 0 0 0 1em;
   box-shadow: 0 0 1rem  black;
+  margin-left: 5em;
+  border: 1px solid black;
 }
 
 div img  {
@@ -50,17 +54,19 @@ div img  {
 }
 
 .industry  {
-  margin-left: 15%;
+  margin-left: 6em;
 }
 
 .education  {
-  margin-left: 10%;
+  margin-left: 4em;
 }
 
 .facility  {
-  margin-left: 5%;
+  margin-left: 2em;
 }
-
+.home  {
+  margin-left: 0;
+}
 .florida  {
   text-align: center;
   width: 100%;
@@ -127,6 +133,9 @@ div img  {
   padding: 0 1em; 
   font-family: 'Source Serif Pro', serif;
   box-shadow: 3px 3px 3px black;
+  -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
   h1  {
     text-decoration: underline;
   }
@@ -161,13 +170,16 @@ section  {
   justify-content: center;
   align-items: center;
   background-color: #C2CFFF;
-  border: 8px solid black;
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaRLj24obqTMGAFmvyb4g3qvYHSC-vtM8juYRzBzhBYMA57nh5");
+  background-size: contain;
+  border: 1.5px solid black;
   margin: 0 .5em;
 }
 
 form  {
   margin-top: 2em;
   font-family: $navfonts;
+  text-shadow: 1px 1px 1px white;
 }
 
 section h4  {
@@ -184,14 +196,22 @@ section a  {
   text-align: center; 
 }
 
+input  {
+  font-family: Times, sans-serif; 
+  font-size: 1rem;
+}
 .share  {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 1em 0 2em 0;
 }
+@media (max-width: 875px){
+  li  {
+  }
+}
 
-@media (max-width: 725px) {
+@media (max-width: 900px) {
   .flexcontainer {
     display: flex;
     justify-content: center;
@@ -203,21 +223,31 @@ section a  {
     width: 45%;
     margin-right: 6em;
   }
+  
   li  {
     width: 100%;
   }
+  
+  header img  {
+    margin-top: 1em;
+  }
+  
   #logo-fesc {
     margin: 0 50%;
   }
+  
   .home  {
     margin: 0 50%;
   }
+  
   .industry {
     margin: 0 50%;
   }
+  
   .education {
     margin: 0 50%;
   }
+  
   .facility  {
     margin: 0 50%;
   }
@@ -226,6 +256,7 @@ section a  {
     width: 100%;
     margin: auto;
   }
+  
   aside  {
     width: 85%;
     margin: 1em auto 1em auto;
@@ -233,6 +264,7 @@ section a  {
     justify-content: center;
     align-items: center;
   }
+  
   form  {
     text-align: center;
   }
@@ -241,13 +273,20 @@ section a  {
 @media (max-width: 350px){
   ul {
     width: 45%;
-    margin-right: 6em;
+    margin-right: 60%;
+    
   }
+  
   #logo-fesc  {
     font-size: 4em;
   }
+  
+  header img  {
+    margin-top: 1em;
+  }
+  
   .article  {
-    margin: 0 1.5em;
+    margin: 0 1.4em;
   }
 
   .energy  {
@@ -257,6 +296,7 @@ section a  {
   figure img  {
     width: 100%;
   }
+  
   aside  {
     width: 75%;
     margin: 1em auto 1em auto;
@@ -264,6 +304,7 @@ section a  {
     justify-content: center;
     align-items: center;
   }
+  
   .dropdown-content  {
     margin: auto;
   }
