--- a/styles/new-styles.css
+++ b/styles/new-styles.css
@@ -108,7 +108,7 @@ div img {
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  margin: .4em 0 0 4em; }
+  margin: 0 0 0 4em; }
 
 .dropdown-content a {
   color: white;
@@ -174,7 +174,6 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #C2CFFF;
   background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaRLj24obqTMGAFmvyb4g3qvYHSC-vtM8juYRzBzhBYMA57nh5");
   background-size: contain;
   border: 1.5px solid black;
@@ -213,7 +212,7 @@ input {
           align-items: center;
   margin: 1em 0 2em 0; }
 
-@media (max-width: 900px) {
+@media (max-width: 1090px) {
   .flexcontainer {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -257,7 +256,7 @@ input {
     margin: auto; }
 
   aside {
-    width: 85%;
+    width: 88%;
     margin: 1em auto 1em auto;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -286,7 +285,7 @@ input {
     margin: 0 1.4em; }
 
   .energy {
-    width: 100%; }
+    width: 90%; }
 
   figure img {
     width: 100%; }
