experimenting with image1 on education

--- a/styles/new-styles.css
+++ b/styles/new-styles.css
@@ -285,7 +285,10 @@ input {
     margin: 0 1.4em; }
 
   .energy {
-    width: 80%; }
+    width: 90%; }
+
+  .energy1 {
+    width: 75%; }
 
   figure img {
     width: 100%; }
