--- a/styles/new-styles.css
+++ b/styles/new-styles.css
@@ -200,6 +200,30 @@ input {
   font-family: Times, sans-serif;
   font-size: 1rem; }
 
+#chart_div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 2em; }
+
+#barchart_values {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 3em; }
+
 .share {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -212,6 +236,14 @@ input {
           align-items: center;
   margin: 1em 0 2em 0; }
 
+main h1 {
+  text-align: center;
+  font-family: "Anton", sans-serif;
+  background-color: white; }
+
+@media (max-width: 875px) {
+  ul {
+    margin-left: -1em; } }
 @media (max-width: 1090px) {
   .flexcontainer {
     display: -webkit-box;
