--- a/styles/new-styles.css
+++ b/styles/new-styles.css
@@ -342,6 +342,9 @@ main h1 {
     margin: auto; }
 
   form {
-    text-align: center; } }
+    text-align: center; }
+
+  #chart_div {
+    width: 5%; } }
 
 /*# sourceMappingURL=new-styles.css.map */
