--- a/styles/new-styles.scss
+++ b/styles/new-styles.scss
@@ -229,8 +229,7 @@ main h1  {
 }
 
 @media (max-width: 875px){
-  ul  {margin-left: -1em;
-  }
+  ul  {margin-left: -1em;}
 }
 
 @media (max-width: 1090px) {
@@ -336,5 +335,8 @@ main h1  {
   
   form  {
     text-align: center;
+  }
+  #chart_div  {
+    width: 5%;
   }
 }
