Deleted #chart-div from css

--- a/styles/new-styles.css
+++ b/styles/new-styles.css
@@ -342,9 +342,6 @@ main h1 {
     margin: auto; }
 
   form {
-    text-align: center; }
-
-  #chart_div {
-    width: 5%; } }
+    text-align: center; } }
 
 /*# sourceMappingURL=new-styles.css.map */
