--- a/styles/new-styles.scss
+++ b/styles/new-styles.scss
@@ -199,7 +199,7 @@ input  {
   
 }
 
-#chart_div  {
+#chart_div, #chart_div2  {
   display: flex;
   justify-content: center;
   align-items: center;
